--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "keywords": [
     "gatsby"
   ],
+  "engines": {
+ "node": "18.0.0"
+},
   "license": "0BSD",
   "main": "n/a",
   "repository": {
@@ -21,7 +24,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "gatsby serve --port 3000",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
